--- a/config/database.yml
+++ b/config/database.yml
@@ -10,22 +10,23 @@ development:
   host: localhost
   pool: 5
   username: jtrope89
-  password: $sharf84pos$
+  dev_password: ENV["DEV_PASSWORD"]
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
+
 test:
   adapter: postgresql
   database: project_test
   pool: 5
   username: jtrope89
-  password: $sharf84pos$
+  password: ENV["TEST_PASSWORD"]
 
 production:
   adapter: postgresql
   database: project_production
   pool: 5
   username: jtrope89
-  password: $sharf84pos$
+  password: ENV["PROD_PASSWORD"]
   
