--- a/config/database.yml
+++ b/config/database.yml
@@ -10,7 +10,7 @@ development:
   host: localhost
   pool: 5
   username: jtrope89
-  dev_password: ENV["DEV_PASSWORD"]
+  password: <%= ENV["DEV_PASSWORD"] %>
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
@@ -21,12 +21,12 @@ test:
   database: project_test
   pool: 5
   username: jtrope89
-  password: ENV["TEST_PASSWORD"]
+  password: <%= ENV['TEST_PASSWORD'] %>
 
 production:
   adapter: postgresql
   database: project_production
   pool: 5
   username: jtrope89
-  password: ENV["PROD_PASSWORD"]
+  password: <%= ENV['PROD_PASSWORD"] '>
   
